objects/CS_Claims__c.object
<CustomObject>
    <description>TNT UK Claims Form Attachment Handling SR 2751</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_requested_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All requested information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_I_the_record_Owners_Manager__c</fullName>
        <description>Used to calculate whether the logged in user is the record Owners Manger or not.</description>
        <formula>IF( Owner:User.ManagerId = $User.Id , True , False)</formula>
        <label>Am I the record Owners Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClaimReturnMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check-box to check whether TNT Claim Return Mail Already sent to User.</description>
        <label>Claim Return Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Stage_Status__c</fullName>
        <formula>IF( ISPICKVAL(Claims_Stage__c , &apos;Created&apos;) ,&apos;RED&apos; ,IF(OR( ISPICKVAL(Claims_Stage__c , &apos;Sent to Customer&apos;),ISPICKVAL(Claims_Stage__c , &apos;In Progress&apos;)), &apos;YELLOW&apos;, &apos;GREEN&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Stage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Stage__c</fullName>
        <label>Claims Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Status__c</fullName>
        <formula>CASE(  Claim_Stage_Status__c  , &quot;RED&quot; , IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;, 20, 60) , &quot;YELLOW&quot; , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;, 20, 60) , &quot;GREEN&quot; , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;, 20, 60) , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claims Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_no__c</fullName>
        <label>Consignment no</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_of_relevant_commercial_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A copy of relevant commercial invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_of_repair_estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A copy of repair estimate/invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_of_consignment_exclcuding_VAT__c</fullName>
        <label>Cost value of consignment exclcuding VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_items_exclcuding_VAT__c</fullName>
        <label>Cost value of item(s) exclcuding VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_your_TNT_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit your TNT account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Damaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_dispatch__c</fullName>
        <label>Date of Despatch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declarant_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declarant_Full_Name_of__c</fullName>
        <label>Full name of claimant</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims (Depot)</relationshipLabel>
        <relationshipName>DepotClaims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depot_no__c</fullName>
        <inlineHelpText>Is auto populated from the Depot field when clicking &apos;Save&apos;.</inlineHelpText>
        <label>Depot no</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_description_of_items__c</fullName>
        <label>Detailled description of the item(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Visit_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To record the number of times the claim form was opened by the customer</description>
        <inlineHelpText>The number of times the claim form was visited or opened by the customer.</inlineHelpText>
        <label>Form Visit Counter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_Claims_Email_ID__c</fullName>
        <defaultValue>&quot;uk.claims.info@tnt.com&quot;</defaultValue>
        <description>this is a hidden field which would be used in the email template as the to email for sending the completed form to the lotus notes claims system</description>
        <label>Lotus Notes Claims Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_1__c</fullName>
        <label>Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_2__c</fullName>
        <label>Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_3__c</fullName>
        <label>Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact_Name__c</fullName>
        <label>Contact name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Telephone_no__c</fullName>
        <label>Telephone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Owners_Manager__c</fullName>
        <description>Shows the name of the record Owners Manager as setup on User records. This field is used for reporting at team level.</description>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Record Owners Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_no__c</fullName>
        <label>Claim Reference no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_cost__c</fullName>
        <label>What is the repair cost?</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Consignment_No__c</fullName>
        <label>Replacement consignment no</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salvage_value__c</fullName>
        <label>Salvage value ?</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sender_Address_1__c</fullName>
        <label>Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address_2__c</fullName>
        <label>Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address_3__c</fullName>
        <label>Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Contact_Name__c</fullName>
        <label>Contact name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Email_Address__c</fullName>
        <inlineHelpText>If the Contact above does not have an Email Address stored for them, you can enter one to use here.

If they do, then leave this field blank as it is auto populated from the Contact when clicking &apos;Save&apos;.</inlineHelpText>
        <label>Customer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Telephone_no__c</fullName>
        <label>Telephone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sender_company_name__c</fullName>
        <label>Company name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is used in workflow to count 21 days after email with link had been sent to customer</description>
        <label>Sent To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNT_account_no__c</fullName>
        <inlineHelpText>Is auto populated from the Account field when clicking &apos;Save&apos;.</inlineHelpText>
        <label>TNT account no</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_of_items__c</fullName>
        <label>Weight of lost/damaged item(s) kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cheque__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>damaged_packing_inspection__c</fullName>
        <description>Please state where the damaged item(s) and packing can be inspected</description>
        <inlineHelpText>Please state where the damaged item(s) and packing can be inspected</inlineHelpText>
        <label>item(s) and packing can be inspected at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>photographs_of_the_items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brouchers/photographs of the items</label>
        <type>Checkbox</type>
    </fields>
    <label>Claim Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>kelly reay</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Claims_Sent_to_Customer</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Sent to Customer</value>
        </filters>
        <label>All Claims - Sent to Customer</label>
    </listViews>
    <listViews>
        <fullName>Claims_Closed</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Claims - Closed</label>
    </listViews>
    <listViews>
        <fullName>Claims_Not_Sent</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>All Claims Not Sent</label>
    </listViews>
    <listViews>
        <fullName>Claims_Queue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Claims Queue</label>
        <queue>Claims_Queue</queue>
    </listViews>
    <listViews>
        <fullName>My_Claims_All</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Claims - All</label>
    </listViews>
    <listViews>
        <fullName>My_Claims_Closed</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Claims Closed</label>
    </listViews>
    <listViews>
        <fullName>My_Claims_Not_Sent</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Claims Not Sent</label>
    </listViews>
    <listViews>
        <fullName>My_Outstanding_Claims</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Sent to Customer,In Progress,Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Outstanding Claims Forms</label>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Claim_Forms</fullName>
        <columns>NAME</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Claims_Status__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Returned</value>
        </filters>
        <label>My Submitted Claim Forms</label>
    </listViews>
    <listViews>
        <fullName>Outstanding_Claims</fullName>
        <columns>NAME</columns>
        <columns>Claims_Status__c</columns>
        <columns>TNT_account_no__c</columns>
        <columns>Reference_no__c</columns>
        <columns>Depot_no__c</columns>
        <columns>Consignment_no__c</columns>
        <columns>Sender_Email_Address__c</columns>
        <columns>Claims_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claims_Stage__c</field>
            <operation>equals</operation>
            <value>Sent to Customer,In Progress</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>All Outstanding Claims Form</label>
    </listViews>
    <nameField>
        <displayFormat>CLN-{000000}</displayFormat>
        <label>Claim Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Forms</pluralLabel>
    <recordTypes>
        <fullName>CS_Customer</fullName>
        <active>true</active>
        <description>To view claims form as Customer(Not used for creating new)</description>
        <label>CS Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>CS_Sent_to_Customer</fullName>
        <active>true</active>
        <description>To view the Claims form in lock stage(Not used for creating new)</description>
        <label>CS Sent to Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>TNT_CS_Agent</fullName>
        <active>true</active>
        <description>To view Claims form as CS Agent(Use this for creating new)</description>
        <label>TNT CS Agent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Contact_is_entered</fullName>
        <active>true</active>
        <description>Check that email or Contact is entered by Agent</description>
        <errorConditionFormula>ISBLANK(Contact__r.Email) &amp;&amp; ISBLANK(Sender_Email_Address__c )</errorConditionFormula>
        <errorMessage>You must select a Contact with an Email Address or manually enter the &apos;Customer Email Address&apos;.</errorMessage>
    </validationRules>
</CustomObject>